# leblancfg.github.io

./: .Makefile.swp  .gitignore  .gitmodules  .notes.md.swp  .pelicanconf.py.swp  .publishconf.py.swp  .travis.yml  CNAME  Makefile  archives.html  authors.html  automating-command-execution-across-tmux-panes.html  being-a-good-unix-neighbour.html  benchmarks_writing_pandas_dataframe_SQL_Server.html  bkp.py  categories.html  crossfit_open_2019_analysis_benchmark_workouts.html  data-bus-pattern-for-data-engineering.html  first-steps-with-rust.html  getting-started-with-python-and-jupyter-notebooks-1.html  getting-started-with-python-and-jupyter-notebooks-2.html  higher-level-functions-python-filter.html  higher-level-functions-python-map.html  higher-level-functions-python-reduce.html  i-miss-vim.html  index.html  index2.html  installing-azure-cli-on-manjaro-arch-with-anaconda.html  installing-cuda-cudnn-tensorflow-nvidia-gtx960.html  level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour.html  notes.md  pelicanconf.py  publishconf.py  pyproject.toml  python-map-function-and-benchmarks-for-exponentials.html  requirements.txt  settings.py  tags.html  til-nerdtree-bookmarks.html  unhashable-python-unique-locations-geometry-geodataframe.html
author/: francois-leblanc.html  francois-leblanc2.html
category/: cli-unix.html  crossfit-python.html  data-engineering.html  linux.html  python-sql-ms.html  python.html  rust.html  tmux.html  vim.html
content/: CrossFit Analysis - Athlete Statistics.nbdata  CrossFit Analysis - Benchmark Workouts.nbdata  data_bus.md  (+32 more)
(+123 files in other folders)
