[project]
name = "leblancfg-github-io"
version = "0.1.0"
description = "My shitty blog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Markdown==3.4.1",
    "pelican==4.8.0",
    "jupyter>=1.0",
    "ipython>=4.0",
    "beautifulsoup4",
    "ghp-import==1.0.1",
    "pelican-jupyter==0.10.1",
    "jinja2==2.11.3",
    "markupsafe==2.0.1",
    "numpy>=2.2.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
